# video_cut_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
action/: ass_effects.py  qc.py  render.py  review.py  timeline.py  tts.py
agent/: background.py  compact.py  config.py  context_memory.py  events.py  experience.py  log_store.py  log_view.py  loop.py  model_client.py  session.py  skills.py  subagent.py  todo.py  tools.py
perception/: probe.py  scenes.py  transcribe.py  watch.py
skills/: __init__.py
skills/_shared/timeline-format/: SKILL.md
skills/_shared/visual-review-protocol/: SKILL.md
skills/ecommerce-clip/: SKILL.md
skills/manju-compilation/: SKILL.md
tests/: test_smoke.py
